--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,9 @@
             "request": "launch",
             "name": "Launch Chrome against localhost",
             "url": "http://localhost:8081",
-            "webRoot": "${workspaceFolder}"
+            "webRoot": "${workspaceRoot}/src",
+            "sourceMapPathOverrides": {
+            "webpack:///src/*": "${webRoot}/*"
         }
     ]
 }
